[workspace.package]
description = "Run shell commands in frs style."
authors = ["Myriad Dreamin"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/Myriad-Dreamin/frs"

[workspace]
members = [
    "frs",
]

[workspace.dependencies]

once_cell = "1.17.1"

clap = { version = "4.3", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.3"
clap_complete_fig = "4.3"

serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

ansi_term = "0.12.1"
